# emailtrail

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  Makefile  Pipfile  README.md  driver.py  email_trail.py  main.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: test.yml
analyse_dataset/: .gitignore  run.py
emailtrail/: __init__.py  __version__.py  models.py  module.py  utils.py
tests/: .gitignore  delay_test.py  test_analysis.py  test_label_extraction.py  test_parsing.py  test_utils.py  timestamp_test.py
